[package]
name = "yumana_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.43"
reqwest = { version = "0.11", features = ["json"] }
